deployment/deployment-stg.yaml
# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airserver-stg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airserver-stg
  template:
    metadata:
      labels:
        app: airserver-stg
      annotations:
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/metrics.portNumber: "9090"
    spec:
      containers:
      - env:
        - name: AIR_APPLICATION_LISTEN
          value: 0.0.0.0:8080
        - name: AIR_APPLICATION_DOMAIN
          value: stg.air.ms
        - name: AIR_DATABASE_HOST
          value: db-dev-homadadsybgo.db.upclouddatabases.com
        - name: AIR_DATABASE_PORT
          value: "11569"
        - name: AIR_DATABASE_CACERTPATH
          value: /etc/db-ca-cert/ca.crt
        - name: AIR_DATABASE_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: postgres-credentials
        - name: AIR_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-credentials
        - name: AIR_DATABASE_NAME
          value: air_server_staging
        - name: RUST_LOG
          value: info
        image: ghcr.io/phnx-im/airserver@sha256:80b7673e5920caa97686874f0c4eda06b1e384e678056db23294843013a1dec7
        name: airserver-stg
        volumeMounts:
        - mountPath: /etc/db-ca-cert
          name: ca-cert-volume
          readOnly: true
        - mountPath: server/configuration/staging.yaml
          name: configuration
          readOnly: true
          subPath: staging.yaml
      volumes:
      - name: ca-cert-volume
        secret:
          defaultMode: 420
          secretName: db-ca-cert
      - name: configuration
        secret:
          defaultMode: 420
          secretName: air-backend-config
