deployment/air-backend.yaml
# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later
apiVersion: v1
kind: Service
metadata:
  name: air-backend
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9420
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: airserver
