deployment/ingress-http.yaml
# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: air-ingress-http
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prod.air.ms
  rules:
  - host: prod.air.ms
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: air-backend
            port:
              number: 80
